--- a/style.css
+++ b/style.css
@@ -1,228 +1,306 @@
 body {
-      font-family: "Montserrat", sans-serif;
-    }
-    
-  
-
-header{
-    background-color: #bbbbbb;
-    padding: 20px 0;
-}
-.caja{
-    width: 940px;
-    position: relative;
-    margin: 0 auto;
-}
-nav{
-    position: absolute;
-    top: 110px;
-    right: 0;
-}
-nav li{
-    display: inline;
-    margin: 0 0 0 15px;
-}
-nav a{
-    text-transform: uppercase;
-    color: black;
-    font-weight: bold;
-    font-size: 22px;
-    text-decoration: none;
-}
-nav a:hover{
-    color:#c78c19;
-    text-decoration: underline;
-}
-.productos{
-    width: 940px;
-    margin: 0 auto;
-    padding: 50px;
-}
-.productos h2{
-    
-    font-size: 20px;
-    font-weight: bold;
+  font-family: "Montserrat", sans-serif;
 }
 
-.productos li{
-    display: inline-block;
+/* HEADER */
+header {
+  background-color: #bbbbbb;
+  padding: 20px 0;
+}
+
+.caja {
+  width: 940px;
+  position: relative;
+  margin: 0 auto;
+}
+
+nav {
+  position: absolute;
+  top: 110px;
+  right: 0;
+}
+
+nav li {
+  display: inline;
+  margin: 0 0 0 15px;
+}
+
+nav a {
+  text-transform: uppercase;
+  color: black;
+  font-weight: bold;
+  font-size: 22px;
+  text-decoration: none;
+}
+
+nav a:hover {
+  color: #c78c19;
+  text-decoration: underline;
+}
+
+/* PRODUCTOS */
+.productos {
+  width: 940px;
+  margin: 0 auto;
+  padding: 50px;
+}
+
+.productos h2 {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.productos li {
+  display: inline-block;
+  text-align: center;
+  width: 28%;
+  vertical-align: top;
+  margin:  1.5%;
+  padding: 30px 20px;
+  box-sizing: border-box;
+  border: 2px solid #000000;
+  border-radius: 25px;
+  transition: transform 0.3s ease;
+}
+
+.productos li:hover {
+transform: scale(1.05);
+  border-color: #c78c19;
+}
+
+.productos li:active {
+  border-color: #088c19;
+}
+.productos li h2{
+transition: font-size 0.3s ease;}
+
+.productos li:hover h2 {
+  font-size: 24px;
+  margin-bottom: 10px
+}
+
+.productos img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto 10px;
+  border-radius: 10px;
+}
+
+.descripcion {
+  font-size: 18px;
+}
+
+.costo {
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+/* FOOTER */
+footer {
+  text-align: center;
+  background: url(imagenes/bg.jpg);
+  padding: 40px;
+  color: #cccccc;
+}
+
+/* FORMULARIO */
+form {
+  margin: 40px 0;
+}
+
+form label,
+form legend {
+  display: block;
+  font-size: 20px;
+  margin: 0 0 10px;
+}
+
+.input-padron {
+  display: block;
+  margin: 0 0 20px;
+  padding: 10px 25px;
+  width: 50%;
+}
+
+.checkbox {
+  margin: 20px 0;
+}
+
+.enviar {
+  width: 40%;
+  padding: 15px 0;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+  background: orange;
+  border: none;
+  border-radius: 5px;
+  transition: 1s all;
+  cursor: pointer;
+}
+
+.enviar:hover {
+  background: darkorange;
+  transform: scale(1.2);
+}
+
+/* TABLAS */
+table {
+  margin: 40px 40px;
+}
+
+thead {
+  background: #555555;
+  color: white;
+  font-weight: bold;
+}
+
+td,
+th {
+  border: 1px solid black;
+  padding: 8px 15px;
+}
+
+/* HOME (NO CAMBIADO) */
+.banner {
+  width: 100%;
+}
+
+.principal {
+  padding: 3em 0;
+  background: #fefefe;
+  width: 940px;
+  margin: 0 auto;
+}
+
+.tituloPrincipal {
+  text-align: center;
+  font-size: 2em;
+  margin: 0 0 1em;
+  clear: left;
+}
+
+.tituloPrincipal::first-letter {
+  font-weight: bold;
+}
+
+.principal p {
+  margin: 0 0 1em;
+}
+
+.principal strong {
+  font-weight: bold;
+}
+
+.principal em {
+  font-style: italic;
+}
+
+.utensilios {
+  width: 120px;
+  float: left;
+  margin: 0 20px 20px 0;
+}
+
+.mapa {
+  padding: 3em 0;
+  background: linear-gradient(#fefefe, #888888);
+}
+
+.mapa p {
+  margin: 0 0 2em;
+  text-align: center;
+}
+
+.mapaContenido {
+  width: 940px;
+  margin: 0 auto;
+}
+
+.diferenciales {
+  padding: 3em 0;
+  background: #888888;
+}
+
+.contenidoDiferenciales {
+  width: 640px;
+  margin: 0 auto;
+}
+
+.listaDiferenciales {
+  width: 40%;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.items {
+  line-height: 1.5;
+}
+
+.items::before {
+  content: "★";
+}
+
+.items:first-child {
+  font-weight: bold;
+}
+
+.imagenDiferencial {
+  width: 60%;
+  transition: 400ms;
+  box-shadow: 10px 10px 30px 15px black, -10px -10px 30px 15px black;
+}
+
+.imagenDiferencial:hover {
+  opacity: 0.3;
+}
+
+.video {
+  width: 560px;
+  margin: 1em auto;
+}
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 480px) {
+  h1 {
     text-align: center;
-    width: 30%;
-    vertical-align: top;
-    
-    margin: 0 1.5%;
-    padding: 30px 20px;
-    box-sizing: border-box;
-    border: 2px solid #000000;
-    border-radius: 25px 25px 25px 25px;
+  }
 
-}
-.productos li:hover{
-    border-color: #c78c19;
-}
-.productos li:active{
-    border-color: #088c19;
-    
-}
-.productos li:hover h2{
-    font-size: 33px;
-}
-.descripcion{
-    font-size: 18px;
-}
-.costo{
-    font-size: 20px;
-    font-weight: bold;
-    margin-top: 10px;
-}
-footer{
+  nav {
+    position: static;
     text-align: center;
-    background:url(imagenes/bg.jpg);
-    padding: 40px;
-color: #cccccc;
-}   
+  }
 
-form{
-    margin: 40px 0;
-}
-form label, form legend{
-    display: block;
-    font-size: 20px;
-    margin: 0 0 10px;
-}
+  .caja,
+  .principal,
+  .mapaContenido,
+  .contenidoDiferenciales,
+  .video {
+    width: auto;
+    padding: 0 10px;
+  }
 
-.input-padron{
-    display: block;
-    margin: 0 0 20px;
-    padding: 10px 25px;
-    width: 50%;
-}
-.checkbox{
-    margin: 20px 0;
-}
-.enviar{
-    width: 40%;
-    padding: 15px 0;
-    font-size: 18px;
-    font-weight: bold;
-    color: white;
-    background: orange;
-    border: none;
-    border-radius: 5px;
-    transition: 1s all;
-    cursor: pointer;
-}
-.enviar:hover{
-    background: darkorange;
-    transform: scale(1.2);
-}
-table{
-    margin: 40px 40px;
-}
-thead{
-    background: #555555;
-    color: white;
-    font-weight: bold;
-}
-td, th{
-    border: 1px solid black;
-    padding: 8px 15px;
-}
-/*css para muestra de home*/
-.banner{
+  .listaDiferenciales,
+  .imagenDiferencial {
     width: 100%;
-}
-.principal{
-    padding: 3em 0;
-    background: #fefefe;
-    width: 940px;
-    margin: 0 auto;
-}
-.tituloPrincipal{
-    text-align: center;
-    font-size: 2em;
-    margin: 0 0 1em;
-    clear: left;
-    
-}
-.tituloPrincipal::first-letter{
-    font-weight: bold;
-}
-.principal p{
-margin: 0 0 1em;
-}
-.principal strong{
-    font-weight: bold;
-}
-.principal em{
-    font-style: italic;
-}
-.utensilios{
-width: 120px;
-float: left;
-margin: 0 20px 20px 0;
-}
-.mapa{
-    padding: 3em 0;
-    background:linear-gradient(#fefefe,#888888);
-}
-.mapa p{
-    margin: 0 0 2em;
-    text-align: center;
-}
-.mapaContenido{
-    width: 940px;
-    margin: 0 auto;
-}
-.diferenciales{
-    padding: 3em 0;
-    background:#888888 ;
-    
-}
-.contenidoDiferenciales{
-    width: 640px;
-    margin: 0 auto;
-}
-.listaDiferenciales{
-        width: 40%;
-        display: inline-block;
-        vertical-align: top;
-    }
-.items{
-    line-height: 1.5;
-}
-.items::before{
-    content: "★";
-}
-.items:first-child{
-    font-weight: bold;
+  }
+
+  /* SOLO CAMBIO PARA PRODUCTOS EN MÓVIL */
+  .productos {
+    width: auto;
+    padding: 20px 10px;
+  }
+
+  .productos li {
+    width: 100%;
+    margin: 20px 0;
+  }
+
+  .productos img {
+    width: 100%;
+    height: auto;
+  }
 }
 
-.imagenDiferencial{
-    width: 60%;
-    transition: 400ms;
-    box-shadow: 10px 10px 30px 15px black, -10px -10px 30px 15px black;
-    
-}
-.imagenDiferencial:hover{
-    opacity: .3;
-}
-.video{
-    width: 560px;
-    margin: 1em auto    ;
-}
-@media screen and (max-width:480px){
-    h1{
-        text-align: center;
-    }
-    nav{
-        position: static;
-    }
-    .caja, .principal, .mapaContenido, .contenidoDiferenciales, .video{
-        width: auto;
-    }
-    .listaDiferenciales, .imagenDiferencial{
-        width: 100%;
-
-    }
-}
